# LGTVCompanion

./: .gitignore  LGTV-Easy-Mode-UBUNTU.sh  LGTV-Easy-Mode-WINDOWS.bat  LGTV-Easy-Mode-WINDOWS.ps1  LGTVCompanion.sln  LICENSE  README.md  vcpkg.json
Common/: Common.cpp  Common.h  LgApi.h  common_app_define.h  device.h  event.cpp  event.h  help_commands.h  ipc.cpp  ipc.h  ipc_v2.cpp  ipc_v2.h  lg_api.h  lg_api_buttons.h  lg_api_commands.h  log.cpp  log.h  preferences.cpp  preferences.h  restart_strings.h  tools.cpp  tools.h
Docs/: Build how-to.md  Commandline.md  Powershell functions.md  Scripting.md
EasyMode/: .gitignore  README.md  pyproject.toml
EasyMode/launcher/: launcher.bat  launcher.ps1  launcher.sh
EasyMode/lgtv_easy/: __init__.py  __main__.py  _ws.py  applog.py  autostart.py  cli.py  config.py  daemon.py  discovery.py  gui.py  idle.py  mock_tv.py  netdiag.py  singleton.py  webos.py  wizard_text.py  wol.py
EasyMode/tests/: conftest.py  gui_smoke.py  mock_tv_server.py  screenshot.py  simulate_session.py  test_autostart.py  test_config.py  test_daemon.py  test_diagnostics.py  test_e2e_simulation.py  test_idle_and_wol.py  test_run_subprocess.py  test_shutdown.py  test_singleton.py  test_webos_protocol.py
Example scripts/: Named pipe client - Async Read and Write Example v2 - Copy.ahk  Named pipe client - Read Events Example v2.ahk  Named pipe client - Write Event Example v2.ahk
LGTV Companion Console/: Console.cpp  Console.h  Console.vcxproj  Console.vcxproj.filters  LGTV Companion Console.rc  resource.h
LGTV Companion Service/: Handshake.h  LgApi.h  (+18 more)
(+51 files in other folders)
